// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`experimentsReducer Adds new sampleId when sample is created 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "metadataKeys": Array [],
    "name": "experiment 1",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "sampleIds": Array [
      "testSampleId",
    ],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Adds new sampleId when sample is created and we already have one sample 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "metadataKeys": Array [],
    "name": "experiment 1",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "sampleIds": Array [
      "testSampleId",
      "testAnotherSampleId",
    ],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Correctly creates experiment metadata 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "metadataKeys": Array [
      "metadata-test",
    ],
    "name": "experiment 1",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "sampleIds": Array [
      "testSampleId",
    ],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Correctly deletes experiment metadata 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "metadataKeys": Array [],
    "name": "experiment 1",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "sampleIds": Array [
      "testSampleId",
    ],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Correctly renames experiment metadata 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "metadataKeys": Array [
      "metadata-new",
    ],
    "name": "experiment 1",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "sampleIds": Array [
      "testSampleId",
    ],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Correctly updates pipelineVersion 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "metadataKeys": Array [],
    "name": "experiment 1",
    "notifyByEmail": true,
    "pipelineVersion": 2,
    "sampleIds": Array [
      "testSampleId",
    ],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Deletes an experiment correctly 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "metadataKeys": Array [],
    "name": "experiment 1",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "sampleIds": Array [],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Deletes samples correctly 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "metadataKeys": Array [],
    "name": "experiment 1",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "sampleIds": Array [],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Error state inserts error correctly 1`] = `
Object {
  "ids": Array [],
  "meta": Object {
    "activeExperimentId": null,
    "error": "Error message",
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Inserts a new experiment correctly 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "metadataKeys": Array [],
    "name": "experiment 1",
    "notifyByEmail": true,
    "parentExperimentId": null,
    "pipelineVersion": 1,
    "sampleIds": Array [],
    "updatedAt": null,
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "activeExperimentId": "experiment-1",
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Loading state changes meta state 1`] = `
Object {
  "ids": Array [],
  "meta": Object {
    "activeExperimentId": null,
    "error": false,
    "loading": true,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Loads 0 experiments correctly 1`] = `
Object {
  "ids": Array [],
  "meta": Object {
    "activeExperimentId": undefined,
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Loads an experiment correctly 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "metadataKeys": Array [],
    "name": "experiment 1",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "sampleIds": Array [],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "activeExperimentId": "experiment-1",
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Loads experiments correctly 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "metadataKeys": Array [],
    "name": "experiment 1",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "sampleIds": Array [],
    "updatedAt": "2022-01-17",
  },
  "experiment-2": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-2",
    "metadataKeys": Array [],
    "name": "experiment 2",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "sampleIds": Array [],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
    "experiment-2",
  ],
  "meta": Object {
    "activeExperimentId": "experiment-1",
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Overwrites existing state on loading experiments 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "metadataKeys": Array [],
    "name": "experiment 1",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "sampleIds": Array [],
    "updatedAt": "2022-01-17",
  },
  "experiment-2": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-2",
    "metadataKeys": Array [],
    "name": "experiment 2",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "sampleIds": Array [],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-2",
  ],
  "meta": Object {
    "activeExperimentId": "experiment-2",
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`experimentsReducer Sets up saving state correctly 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "metadataKeys": Array [],
    "name": "experiment 1",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "sampleIds": Array [
      "testSampleId",
    ],
    "updatedAt": "2022-01-17",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": true,
  },
}
`;

exports[`experimentsReducer Updates an experiment correctly 1`] = `
Object {
  "experiment-1": Object {
    "createdAt": "2021-01-01",
    "description": "this is a test description",
    "id": "experiment-1",
    "metadataKeys": Array [],
    "name": "updated name",
    "notifyByEmail": true,
    "pipelineVersion": 1,
    "sampleIds": Array [],
    "updatedAt": "02-01-2021",
  },
  "ids": Array [
    "experiment-1",
  ],
  "meta": Object {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;
